# RI-Assign1-FollowB

./: CMakeLists.txt  LICENSE  README.md  README.txt  environment_setup.sh  package.xml
include/: followb.h
rosbag_files/: (pwall - laser-out)2021-11-25-14-00-42.bag  (pwall in laser)2021-11-25-14-07-18.bag  (pwall in sonar)2021-11-25-14-11-15.bag  (vwall laser out) 2021-11-25-14-03-22.bag
source_code/include/: followb.h
source_code/src/: followb.cpp
source_code/stdr_aux_files/stdr_launchers/launch/: b_map_laser_out.launch  b_map_sonar_out.launch
source_code/stdr_aux_files/stdr_resources/resources/robots/: robot_laser_simple.yaml  robot_sonar.xml  robot_sonar.yaml
src/: followb.cpp  main.cpp
stdr_aux_files/stdr_launchers/launch/: b_map_in.launch  b_map_laser.launch  b_map_laser_in.launch  b_map_out.launch  b_map_sonar.launch  b_map_sonar_in.launch
stdr_aux_files/stdr_resources/maps/: b_map.yaml
stdr_aux_files/stdr_resources/resources/robots/: robot_laser.yaml  robot_sonar.xml  robot_sonar.yaml
